add ndc product and rename ndc to ndc package

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "ndclib",
+  "name": "ndc-lib",
   "version": "1.0.0",
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "publishConfig": { "registry": "https://npm.pkg.github.com/" },
   "dependencies": {
     "jest": "^26.1.0",
     "line-reader": "^0.4.0",
